--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
             <artifactId>javafaker</artifactId>
             <version>0.12</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>test</scope>
+        </dependency>
         
     </dependencies>
 </project>
