--- a/pom.xml
+++ b/pom.xml
@@ -23,5 +23,11 @@
             <scope>test</scope>
         </dependency>
         
+        <dependency>
+            <groupId>com.yahoofinance-api</groupId>
+            <artifactId>YahooFinanceAPI</artifactId>
+            <version>3.15.0</version>
+        </dependency>
+        
     </dependencies>
 </project>
