--- a/pom.xml
+++ b/pom.xml
@@ -29,5 +29,13 @@
             <version>3.15.0</version>
         </dependency>
         
+        <!-- https://mvnrepository.com/artifact/org.apache.derby/derbyclient -->
+        <dependency>
+            <groupId>org.apache.derby</groupId>
+            <artifactId>derbyclient</artifactId>
+            <version>10.13.1.1</version>
+        </dependency>
+
+        
     </dependencies>
 </project>
