--- a/pom.xml
+++ b/pom.xml
@@ -43,5 +43,12 @@
             <version>20201115</version>
         </dependency>
         
+        <!-- google gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+        
     </dependencies>
 </project>
